fix: install prerequisites for TICS in workflow and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,12 @@ dev = [
     # Linting
     "ruff",
     "codespell",
-    "pyright"
+    "pyright",
+
+    # TiCS scan dependencies
+    "flake8",
+    "pylint",
+    "pyyaml",
 ]
 
 [project.urls]
