--- a/.github/workflows/nightly-TICS.yaml
+++ b/.github/workflows/nightly-TICS.yaml
@@ -15,21 +15,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Install requirements
-        run: |
-          sudo apt update -y
-          sudo apt install python3-venv -y
+      - name: Install Just
+        uses: extractions/setup-just@v2
+        with:
+          just-version: 1.46.0
 
-      - name: Create and activate virtual environment
-        run: |
-          python3 -m venv .venv
-          . .venv/bin/activate
-          pip install tox pylint flake8 pytest
-          echo PATH=$PATH >> $GITHUB_ENV
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: 0.9.25
 
+      - name: Install Charmcraft
+        run: sudo snap install charmcraft --classic --channel latest/stable
+      
       - name: Run coverage tests
+        run: just unit
+      
+      - name: Activate tests .venv
         run: |
-          just unit
+          . .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
 
       - name: TICS GitHub Action
         uses: tiobe/tics-github-action@v3
